--- a/Assignments/Assignment 2/190997.ipynb
+++ b/Assignments/Assignment 2/190997.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "source": [
     "# importing libraries\n",
     "import numpy as np\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "source": [
     "# defining the gradient descent function\n",
     "def gradient_descent(gradient, init_, learn_rate, n_iter=50, tol=1e-06):\n",
@@ -38,7 +38,7 @@
     "        if np.all(np.abs(delta) <= tol):\n",
     "            break\n",
     "        x += delta\n",
-    "    return round(x * 1000) / 1000"
+    "    return np.round(x, 3) # Use np.round() instead of round() to round a numpy array for the multivariate case"
    ],
    "outputs": [],
    "metadata": {}
@@ -76,9 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "source": [
-    "min_x1 = gradient_descent(gradient=lambda x: 2 * x + 3, init_=0.0, learn_rate=0.1)\n",
+    "min_x1 = gradient_descent(gradient=lambda x: 2 * x + 3, init_=0.0, learn_rate=0.05, n_iter=500)\n",
     "print('Point of minima:', min_x1)\n",
     "min_y1 = min_x1 ** 2 + 3 * min_x1 + 4\n",
     "print('Minima:', min_y1)"
@@ -104,9 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "source": [
-    "min_x2 = gradient_descent(gradient=lambda x: 4 * (x ** 3) - 6 * x + 2, init_=0.0, learn_rate=0.1)\n",
+    "min_x2 = gradient_descent(gradient=lambda x: 4 * (x ** 3) - 6 * x + 2, init_=0.0, learn_rate=0.05, n_iter=500)\n",
     "print('Point of minima:', min_x2)\n",
     "min_y2 = min_x2 ** 4 - 3 * (min_x2 ** 2) + 2 * min_x2\n",
     "print('Minima:', min_y2)"
@@ -121,18 +121,6 @@
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Hence, "
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
    "metadata": {}
   },
   {
@@ -159,13 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "source": [
     "def gradient_lr(params):\n",
     "    grad = np.array([0.0, 0.0])\n",
     "    for Xn, yn in zip(X, y): # X is the features and y is the labels both of which will be global variables\n",
     "        grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
     "        grad[1] += -2 * (yn - params[0] * Xn - params[1])\n",
+    "    grad /= len(X) # so that grad is not very large and doesn't depend on the number of data points\n",
     "    return grad"
    ],
    "outputs": [],
@@ -181,36 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "source": [
     "np.random.seed(0)\n",
     "X = 2.5 * np.random.randn(10000) + 1.5 # array of 10000 values with mean = 1.5, stddev = 2.5\n",
     "res = 1.5 * np.random.randn(10000) # generate 10000 residual terms\n",
     "y = 2 + 0.3 * X + res # actual values of y"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Now, we need to make a small modification in the gradient_descent() function defined earlier to support multivariate gradient descent. "
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "source": [
-    "# defining the gradient descent function\n",
-    "def gradient_descent_multivariate(gradient, init_, learn_rate, n_iter=50, tol=1e-06):\n",
-    "    x = init_\n",
-    "    for _ in range(n_iter):\n",
-    "        delta = -learn_rate * gradient(x)\n",
-    "        if np.all(np.abs(delta) <= tol):\n",
-    "            break\n",
-    "        x += delta\n",
-    "    return np.round(x, 3) # Use np.round() instead of round() to round a numpy array"
    ],
    "outputs": [],
    "metadata": {}
@@ -224,33 +189,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "source": [
     "params_init = np.array([0.0, 0.0])\n",
     "tic = t.process_time()\n",
-    "params = gradient_descent_multivariate(gradient_lr, init_=params_init, learn_rate=0.00001)\n",
+    "params = gradient_descent(gradient_lr, init_=params_init, learn_rate=0.05, n_iter=1000)\n",
     "toc = t.process_time()\n",
     "time_vanilla_gd = toc - tic\n",
-    "print('Time taken:', time_vanilla_gd, 'seconds')\n",
-    "params"
+    "a = params[0]\n",
+    "b = params[1]\n",
+    "print('a =', a)\n",
+    "print('b =', b)\n",
+    "print('Time taken:', time_vanilla_gd, 'seconds')"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Time taken: 1.044782304999984 seconds\n"
+      "a = 0.295\n",
+      "b = 2.023\n",
+      "Time taken: 3.325558632 seconds\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([0.295, 2.022])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 117
     }
    ],
    "metadata": {}
@@ -272,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "source": [
     "# defining the minibatch stochastic gradient descent function\n",
     "def minibatch_sgd(gradient, init_, learn_rate, n_iter=50, tol=1e-06, batch_size=125):\n",
@@ -299,13 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "source": [
     "def gradient_lr_sgd(params, X_batch, y_batch):\n",
     "    grad = np.array([0.0, 0.0])\n",
     "    for Xn, yn in zip(X_batch, y_batch):\n",
     "        grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
     "        grad[1] += -2 * (yn - params[0] * Xn - params[1])\n",
+    "    grad /= len(X_batch) # so that grad is not very large and doesn't depend on the size of the batch\n",
     "    return grad"
    ],
    "outputs": [],
@@ -320,33 +281,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "source": [
     "params_sgd_init = np.array([0.0, 0.0])\n",
     "tic = t.process_time()\n",
-    "params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.00001)\n",
+    "params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.05, n_iter=1000)\n",
     "toc = t.process_time()\n",
-    "time_sgd = toc - tic\n",
-    "print('Time taken:', time_sgd, 'seconds')\n",
-    "params"
+    "time_minibatch_sgd = toc - tic\n",
+    "a = params[0]\n",
+    "b = params[1]\n",
+    "print('a =', a)\n",
+    "print('b =', b)\n",
+    "print('Time taken:', time_minibatch_sgd, 'seconds')"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Time taken: 0.032973420000018905 seconds\n"
+      "a = 0.295\n",
+      "b = 2.023\n",
+      "Time taken: 0.4765957890000001 seconds\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([0.295, 2.022])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 118
     }
    ],
    "metadata": {}
@@ -362,24 +318,61 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Let's also find the time taken by SGD using a single training example per iteration. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "params_sgd_init_ = np.array([0.0, 0.0])\n",
+    "tic = t.process_time()\n",
+    "params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init_, learn_rate=0.05, n_iter=1000, batch_size=1) # As SGD is just minibatch SGD with the minibatch size equal to 1\n",
+    "toc = t.process_time()\n",
+    "time_sgd = toc - tic\n",
+    "a = params[0]\n",
+    "b = params[1]\n",
+    "print('a =', a)\n",
+    "print('b =', b)\n",
+    "print('Time taken:', time_sgd, 'seconds')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a = 0.295\n",
+      "b = 2.023\n",
+      "Time taken: 0.2541064430000004 seconds\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Let's look at the times taken by vanilla gradient descent and minibatch SGD."
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "source": [
     "print('Time taken by vanilla gradient descent:', time_vanilla_gd)\n",
-    "print('Time taken by minibatch SGD:', time_sgd)"
+    "print('Time taken by SGD:', time_sgd)\n",
+    "print('Time taken by minibatch SGD:', time_minibatch_sgd)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Time taken by vanilla gradient descent: 1.044782304999984\n",
-      "Time taken by minibatch SGD: 0.032973420000018905\n"
+      "Time taken by vanilla gradient descent: 3.325558632\n",
+      "Time taken by SGD: 0.2541064430000004\n",
+      "Time taken by minibatch SGD: 0.4765957890000001\n"
      ]
     }
    ],
@@ -388,51 +381,40 @@
   {
    "cell_type": "markdown",
    "source": [
-    "As we can see, minibatch SGD does much better in terms of time performance than vanilla gradient descent. "
+    "As we can see, SGD and minibatch SGD do much better in terms of time performance than vanilla gradient descent. \n",
+    "\n",
+    "Vanilla gradient descent uses all the data in each iteration whereas SGD and minibatch SGD use only a part of the data in each iteration, which reduces the time of each iteration and hence take less time then vanilla gradient descent. \n",
+    "\n",
+    "We found that the times taken by the gradient descents were as follows:  \n",
+    "t<sub>SGD</sub> < t<sub>minibatch SGD</sub> < t<sub>vanilla gradient descent</sub>\n",
+    "\n",
+    "So, SGD appears to be working the fastest. However, it should be noted that as SGD uses only a single data point in each iteration, the updates would be unstable and it may take more number of iterations for SGD to converge, or, may have a higher loss as compared to minibatch SGD. But for same number of iterations, SGD would take the least time as it uses only a single data point in each iteration"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "Now, let's find the optimal minibatch size that works best."
+    "Now, let's find the optimal minibatch size that works best. We will consider both the time taken as well as the loss. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "First, let's define a function to find the $L_2$ loss:"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "source": [
-    "params_sgd_init = np.array([0.0, 0.0])\n",
-    "min_time = float('inf')\n",
-    "opt_batch_size = 0\n",
-    "for batch_size in range(1, 1001, 125):\n",
-    "    # print('Current batch size:', batch_size)\n",
-    "    tic = t.process_time()\n",
-    "    params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.00001)\n",
-    "    toc = t.process_time()\n",
-    "    time_sgd = toc - tic\n",
-    "    if time_sgd < min_time:\n",
-    "        min_time = time_sgd\n",
-    "        opt_batch_size = batch_size\n",
-    "print('The optimal minibatch size is', opt_batch_size, 'and it takes', min_time, 'seconds')"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The optimal minibatch size is 751 and it takes 0.019864095000002635 seconds\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "source": [
-    "# Interpret your findings"
+    "def l2_loss(params):\n",
+    "    loss = 0.0\n",
+    "    for i in range(len(X)):\n",
+    "        loss += (y[i] - params[0] * X[i] - params[1]) ** 2\n",
+    "    return loss"
    ],
    "outputs": [],
    "metadata": {}
@@ -440,14 +422,71 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Q2. Bayesian network"
+    "Now, let's iterate over some minibatch sizes and see which works the best. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "params_sgd_init = np.array([0.0, 0.0])\n",
+    "min_time = float('inf')\n",
+    "min_loss = float('inf')\n",
+    "min_time_batch_size = 0\n",
+    "min_loss_batch_size = 0\n",
+    "for batch_size in range(125, 1001, 125):\n",
+    "    # print('Current batch size:', batch_size)\n",
+    "    tic = t.process_time()\n",
+    "    params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.1, n_iter=500, batch_size=batch_size)\n",
+    "    toc = t.process_time()\n",
+    "    time_sgd = toc - tic\n",
+    "    loss_sgd = l2_loss(params_sgd)\n",
+    "    if time_sgd < min_time:\n",
+    "        min_time = time_sgd\n",
+    "        min_time_batch_size = batch_size\n",
+    "    if loss_sgd < min_loss:\n",
+    "        min_loss = loss_sgd\n",
+    "        min_loss_batch_size = batch_size\n",
+    "    print(f'For a batch size of {batch_size}: time taken = {round(time_sgd, 3)} seconds and L2 loss = {round(loss_sgd, 3)}')\n",
+    "print()\n",
+    "print('The least time taking minibatch size is', min_time_batch_size, 'and it takes', min_time, 'seconds')\n",
+    "print('The least loss minibatch size is', min_loss_batch_size, 'and it gives a loss of', min_loss)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "For a batch size of 125: time taken = 0.281 seconds and L2 loss = 22625.428\n",
+      "For a batch size of 250: time taken = 0.332 seconds and L2 loss = 22321.531\n",
+      "For a batch size of 375: time taken = 0.532 seconds and L2 loss = 22214.284\n",
+      "For a batch size of 500: time taken = 0.657 seconds and L2 loss = 22374.676\n",
+      "For a batch size of 625: time taken = 0.771 seconds and L2 loss = 22228.737\n",
+      "For a batch size of 750: time taken = 0.906 seconds and L2 loss = 22485.522\n",
+      "For a batch size of 875: time taken = 1.04 seconds and L2 loss = 22256.803\n",
+      "For a batch size of 1000: time taken = 1.185 seconds and L2 loss = 22189.813\n",
+      "\n",
+      "The least time taking minibatch size is 125 and it takes 0.2811508429999998 seconds\n",
+      "The least loss minibatch size is 1000 and it gives a loss of 22189.813166395394\n"
+     ]
+    }
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "![Bayesian Network](bayesian_network.png \"Bayesian Network\")"
+    "As we can see, the time taken increases as the batch size increases but the minimum loss can be seen with a batch size of 375. \n",
+    "\n",
+    "As the time taken for a batch size of 375 is also pretty low, we can say that this is the optimal minibatch size that works best. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Q2. Bayesian network"
    ],
    "metadata": {}
   },
