--- a/Assignments/Assignment 3/190997.ipynb
+++ b/Assignments/Assignment 3/190997.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "id": "bc771a62",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "['variance', 'skewness', 'curtosis', 'entropy', 'class']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "id": "1f16f5da",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "[1372 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "[1372 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,28 +416,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4167420365.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_301504/4167420365.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    while :\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def perceptron_algo():\n",
-    "    w = np.zeros(4)\n",
+    "def perceptron_algo(X, y, thresh):\n",
+    "    w = np.zeros(4) # change\n",
     "    eta = 1\n",
-    "    while :\n",
+    "    t = 0\n",
+    "    t_mistake = 0\n",
+    "    while t - t_mistake < thresh:\n",
     "        idx = np.random.choice(np.arange(len(X)))\n",
-    "        X_n = X[idx]\n",
+    "        X_n = X.loc[idx, :]\n",
     "        y_n = y[idx]\n",
     "        if y_n * np.dot(w, X_n) < 0:\n",
     "            w += eta * y_n * X_n\n",
+    "            t_mistake = t\n",
+    "        t += 1\n",
     "    return w"
    ]
   },
@@ -451,12 +446,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(w, x):\n",
-    "    return 1 if np.dot(w, x) >= 0 else -1"
+    "def predict(w, X):\n",
+    "    y = np.zeros(len(X))\n",
+    "    for i in range(len(X)):\n",
+    "        y[i] = 1 if np.dot(w, X.loc[i, :]) >= 0 else -1\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(y_pred, y_actual):\n",
+    "    return (y_pred == y_actual).sum() / len(y_actual)"
    ]
   },
   {
@@ -468,11 +476,333 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train-test split"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variance</th>\n",
+       "      <th>skewness</th>\n",
+       "      <th>curtosis</th>\n",
+       "      <th>entropy</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1240</th>\n",
+       "      <td>-3.55100</td>\n",
+       "      <td>1.89550</td>\n",
+       "      <td>0.186500</td>\n",
+       "      <td>-2.440900</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>703</th>\n",
+       "      <td>1.31140</td>\n",
+       "      <td>4.54620</td>\n",
+       "      <td>2.293500</td>\n",
+       "      <td>0.225410</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>821</th>\n",
+       "      <td>-4.01730</td>\n",
+       "      <td>-8.31230</td>\n",
+       "      <td>12.454700</td>\n",
+       "      <td>-1.437500</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1081</th>\n",
+       "      <td>-5.11900</td>\n",
+       "      <td>6.64860</td>\n",
+       "      <td>-0.049987</td>\n",
+       "      <td>-6.520600</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>3.62890</td>\n",
+       "      <td>0.81322</td>\n",
+       "      <td>1.627700</td>\n",
+       "      <td>0.776270</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>715</th>\n",
+       "      <td>3.49160</td>\n",
+       "      <td>8.57090</td>\n",
+       "      <td>-3.032600</td>\n",
+       "      <td>-0.591820</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>905</th>\n",
+       "      <td>0.74521</td>\n",
+       "      <td>3.63570</td>\n",
+       "      <td>-4.404400</td>\n",
+       "      <td>-4.141400</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1096</th>\n",
+       "      <td>-4.36670</td>\n",
+       "      <td>6.06920</td>\n",
+       "      <td>0.572080</td>\n",
+       "      <td>-5.466800</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>2.04660</td>\n",
+       "      <td>2.03000</td>\n",
+       "      <td>2.176100</td>\n",
+       "      <td>-0.083634</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1061</th>\n",
+       "      <td>-2.31470</td>\n",
+       "      <td>3.66680</td>\n",
+       "      <td>-0.696900</td>\n",
+       "      <td>-1.247400</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1372 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      variance  skewness   curtosis   entropy  class\n",
+       "1240  -3.55100   1.89550   0.186500 -2.440900      1\n",
+       "703    1.31140   4.54620   2.293500  0.225410     -1\n",
+       "821   -4.01730  -8.31230  12.454700 -1.437500      1\n",
+       "1081  -5.11900   6.64860  -0.049987 -6.520600      1\n",
+       "37     3.62890   0.81322   1.627700  0.776270     -1\n",
+       "...        ...       ...        ...       ...    ...\n",
+       "715    3.49160   8.57090  -3.032600 -0.591820     -1\n",
+       "905    0.74521   3.63570  -4.404400 -4.141400      1\n",
+       "1096  -4.36670   6.06920   0.572080 -5.466800      1\n",
+       "235    2.04660   2.03000   2.176100 -0.083634     -1\n",
+       "1061  -2.31470   3.66680  -0.696900 -1.247400      1\n",
+       "\n",
+       "[1372 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# shuffling the rows of the dataframe\n",
+    "data_shuffle = data.sample(frac=1, random_state=1)\n",
+    "data_shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# performing train-test split with 10% of the data as the test data\n",
+    "train_size = int(0.9 * len(data))\n",
+    "data_train = data_shuffle[:train_size].reset_index(drop=True)\n",
+    "data_test = data_shuffle[train_size:].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_split(data):\n",
+    "    data_shuffle = data.sample(frac=1)\n",
+    "    data_shuffle\n",
+    "    train_size = int(0.9 * len(data))\n",
+    "    data_train = data_shuffle[:train_size].reset_index(drop=True)\n",
+    "    data_val = data_shuffle[train_size:].reset_index(drop=True)\n",
+    "    return data_train, data_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cross-validated accuracy is 0.4709677419354839 using a threshold of 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cross-validation\n",
+    "accuracy_dict = {}\n",
+    "for k in range(5):\n",
+    "    data_train_crossval, data_val = data_split(data_train)\n",
+    "    X_train = data_train_crossval.drop('class', axis=1)\n",
+    "    y_train = data_train_crossval['class']\n",
+    "    X_val = data_val.drop('class', axis=1)\n",
+    "    y_val = data_val['class']\n",
+    "    for thresh in range(5, 30, 5):\n",
+    "        if k == 0:\n",
+    "            accuracy_dict[thresh] = 0\n",
+    "        w = perceptron_algo(X_train, y_train, thresh)\n",
+    "        y_pred = predict(w, X_val)\n",
+    "        acc = accuracy(y_pred, y_val)\n",
+    "        accuracy_dict[thresh] += acc\n",
+    "best_acc = 0\n",
+    "best_thresh = 0\n",
+    "for thresh, acc in accuracy_dict.items():\n",
+    "    acc /= 5\n",
+    "    if acc > best_acc:\n",
+    "        best_acc = acc\n",
+    "        best_thresh = thresh\n",
+    "print('The cross-validated accuracy is', best_acc, 'using a threshold of', best_thresh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q1. (d)\n",
+    "Ensure you use a held out validation set and report F1 score on the held out set for your best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The test set accuracy is 0.45652173913043476 using a threshold of 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train = data_train.drop('class', axis=1)\n",
+    "y_train = data_train['class']\n",
+    "X_test = data_test.drop('class', axis=1)\n",
+    "y_test = data_test['class']\n",
+    "w = perceptron_algo(X_train, y_train, best_thresh)\n",
+    "y_pred = predict(w, X_test)\n",
+    "acc = accuracy(y_pred, y_test)\n",
+    "print('The test set accuracy is', acc, 'using a threshold of', best_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score on the test set is 0.626865671641791 using a threshold of 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "tp = ((y_pred == y_test) & (y_test == 1)).sum()\n",
+    "fn = ((y_pred != y_test) & (y_test == 1)).sum()\n",
+    "fp = ((y_pred != y_test) & (y_test == -1)).sum()\n",
+    "tn = ((y_pred == y_test) & (y_test == -1)).sum()\n",
+    "p = tp / (tp + fp)\n",
+    "r = tp / (tp + fn)\n",
+    "f1 = 2 * p * r / (p + r)\n",
+    "print('F1 score on the test set is', f1, 'using a threshold of', best_thresh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q2. MCMC Sampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q2. (a)\n",
+    "Write a function to calculate the Bayesian posterior probability given 50 new data samples drawn from a normal distribution with mean 10 and SD 5, assuming a normal prior with mean 25 and s.d. 5. Plot the pdfs of the prior, the likelihood and the posterior distributions. Explain how you derive the likelihood from the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normal prior:\n",
+    "$$ p(\\theta | \\mu, \\sigma) = \\frac{1}{\\sigma \\sqrt{2 \\pi}} e^{- \\frac{1}{2} \\left( \\frac{\\theta - \\mu}{\\sigma} \\right)^2} $$\n",
+    "\n",
+    "Normal likelihood:\n",
+    "$$ p(\\textbf{y} | \\mu, \\sigma) = \\prod_{n = 1}^N p(y_n | \\mu, \\sigma) = \\frac{1}{\\sigma^N (2 \\pi)^{\\frac{N}{2}}} e^{- \\frac{1}{2} \\sum_{n = 1}^N \\left( \\frac{y_n - \\mu}{\\sigma} \\right)^2} $$\n",
+    "\n",
+    "Posterior:\n",
+    "$$ p(\\theta | \\textbf{y}) = \\frac{p(\\theta) p(\\textbf{y} | \\theta)}{p(\\textbf{y})} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ p(\\theta | \\textbf{y}) = \\frac{p(\\theta) p(\\textbf{y} | \\theta)}{p(\\textbf{y})} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.random.normal(10, 5, 50)"
+   ]
   }
  ],
  "metadata": {
